plugins {
    id 'java-library'
    id 'application'
}

repositories {
    mavenCentral()
}

application {
    mainClass = 'com.cajunsystems.examples.cjent.ExampleRunner'
}

dependencies {
    implementation project(':lib')
    implementation 'org.slf4j:slf4j-api:2.0.12'
    implementation 'ch.qos.logback:logback-classic:1.5.3'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
    options.release = 21
}

tasks.withType(Test).configureEach {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += '--enable-preview'
}
